# Dynamic-Book-Framework-cpp

./: .gitmodules  BookMenu.as  CMakeLists.txt  LICENSE  README.md  Usage  bookmenu.txt  vcpkg-configuration.json
cmake/: Version.h.in
include/: API.h  BookMenuWatcher.h  BookUIManager.h  FileWatcher.h  ImGuiMenu.h  InputListener.h  ModEventHandler.h  PCH.h  PapyrusFuncs.h  SKSEMenuFramework.h  SessionDataManager.h  SetBookTextHook.h  Settings.h  Utility.h
src/: BookMenuWatcher.cpp  BookUIManager.cpp  FileWatcher.cpp  ImGuiMenu.cpp  InputListener.cpp  Main.cpp  ModEventHandler.cpp  PapyrusFuncs.cpp  SessionDataManager.cpp  SetBookTextHook.cpp  Settings.cpp  Utility.cpp
